apps/atlantis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atlantis
  namespace: atlantis
  labels:
    app.kubernetes.io/name: atlantis
    app.kubernetes.io/part-of: gitops
spec:
  selector:
    app.kubernetes.io/name: atlantis
  ports:
    - name: http
      port: 4141
      targetPort: 4141
